# zed-yolo-hook

./: .gitignore  Cargo.toml  README.md  build.rs  zed-yolo-hook.code-workspace
.cargo/: config.toml
.github/workflows/: verify-hook.yml
docs/: 01_yolo_background.md  02_yolo_quickstart.md  03_yolo_research.md  04_yolo_design.md  05_yolo_implementation_log.md  06_yolo_upgrade_guide.md  07_confirmation_scenarios_research.md  08_crash_analysis_2026-03-03.md  09_eliminate_approval_delay.md  10_hang_analysis_v0.227.0_2026-03-05.md  11_offset_recalibration_v0.228.0.md  12_offset_recalibration_v0.230.0.md  13_offset_recalibration_v0.231.1.md  14_exitplanmode_gap_analysis.md  15_session_log_2026-04-05.md  16_free_macos_ci_research.md  17_ci_verification_workflow.md  18_compatibility_v0.232.0.md  19_offset_recalibration_v0.233.0.md  20_compatibility_v0.233.3.md  21_triage_v1.1.2_hang_2026-04-30.md  22_plan_first_launch_optimization.md  23_source_patch_strategy.md  24_remote_zed_yolo_strategy.md  25_cross_compile_macos_strategy.md  26_implementation_roadmap.md  27_v1_1_5_enhanced_source_strategy.md
scripts/: ci-verify.sh
src/: config.rs  lib.rs  logging.rs  process_role.rs  symbols.rs
src/ffi/: dispatch.rs  mod.rs
src/hooks/: entry_scanner.rs  mod.rs  permission_decision.rs  push_entry_hook.rs  session_update_hook.rs  stale_scanner.rs  tool_authorization.rs  upsert_hook.rs
xtask/: Cargo.toml
xtask/src/: main.rs
