[workspace]
members = [".", "xtask"]

[package]
name = "zed-yolo-hook"
version = "0.1.0"
edition = "2024"
description = "YOLO mode for Zed editor — auto-approve AI agent tool calls on macOS via dylib injection"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Frida-gum for function interception (git main for Frida 17.7.3 support)
frida-gum = { git = "https://github.com/frida/frida-rust", features = ["invocation-listener"] }

# Match Zed Preview 0.230.0's ACP protocol types when synthesizing approvals.
agent-client-protocol = "=0.10.4"

# Constructor attribute — runs on dylib load
ctor = "0.6"

# C types for getpid() FFI
libc = "0.2"

# Logging (writes to file, not stdout which would interfere with Zed)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset"] }

# futures oneshot channel — same version as Zed uses
futures-channel = "0.3"

# Serialization for config file
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Home directory detection for config file path
dirs = "6"

# Shared hook registry for multi-hook coordination
dylib-hook-registry = { git = "https://github.com/laris/dylib-kit" }

[profile.release]
strip = true          # Remove debug symbols + symbol table
lto = true            # Link-time optimization — eliminates dead code across crates
codegen-units = 1     # Single codegen unit — better optimization, slower compile
opt-level = "z"       # Optimize for size (smallest binary)
panic = "abort"       # No unwinding tables — saves ~30KB

# Local override pointing at the dylib-kit working copy so we pick up
# fixes ahead of the upstream push (e.g., the 2026-04-25 fix to
# `Patcher::list_injected` matching `, weak)` instead of `(weak)` —
# without this override, `cargo patch list` shows an empty injected-hooks
# section even when the dylibs are correctly loaded). Remove this block
# once the dylib-kit fix is pushed and `cargo update -p dylib-patcher`
# can pull it from git.
[patch."https://github.com/laris/dylib-kit"]
dylib-hook-registry = { path = "../dylib-kit/crates/dylib-hook-registry" }
